--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,9 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template: repeat(7, 1fr) / repeat(4, fr);
+  gap: 15px;
 }
 
 .container div {
@@ -21,18 +24,22 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-area: 1 / 1 / 2 / 5;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2 / 1 / 7 / 2;
 }
 
 .nav {
   background-color: #00DDFF;
+  grid-area: 2 / 2 / 3 / 5;
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 7 / 5;
 }
 
 .article p {
@@ -44,4 +51,5 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-area: 7 / 1 / 8 / 5;
 }
