--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -9,7 +9,7 @@ body, html {
   padding: 16px;
   box-sizing: border-box;
   display: grid;
-  grid-template: repeat(7, 1fr) / repeat(4, fr);
+  grid-template: repeat(7, 1fr) / repeat(4, 1fr);
   gap: 15px;
 }
 
