--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +20,25 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.logo{
+  justify-self: start;
+}
+
+.menu{
+  align-self: center;
+}
+.menu > ul{
+  display: grid;
+  grid-template: 1fr / repeat(4, 1fr);
+}
+
+.menu > ul{
+  list-style-type: none;
 }
 
 .menu ul,
@@ -26,6 +48,9 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2 / 5;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -34,6 +59,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
 }
 
 
@@ -42,12 +69,21 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
 }
 
 .nav {
   background-color: #FF7755;
+  grid-column: 2 / 3;  
+  grid-row: 2 / 3;
 }
 
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+}
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
@@ -55,6 +91,10 @@
 
 .article {
   background-color: #bccbde;
+  grid-row: 3 / 5;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +108,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +124,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / 3;
 }
 
 .footer p {
